Align number columns right as per docs Fixes #2396

--- a/modules/system/assets/ui/less/list.less
+++ b/modules/system/assets/ui/less/list.less
@@ -284,6 +284,11 @@ table.table.data {
         text-align: center;
     }
 
+    th.list-cell-type-number,
+    td.list-cell-type-number {
+        text-align: right;
+    }
+
     //
     // Labels
     //
